# fuzzy-bassoon

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_DESKTOP.md  FASTMCP_REFACTOR.md  QUICKSTART.md  README.md  TRANSFORMATION_COMPLETE.md  pyproject.toml  setup_readonly_user.sql  test_connection.py
src/fuzzy_bassoon/: __init__.py  server.py
