[project]
name = "fuzzy-bassoon"
version = "0.1.0"
description = "A strict read-only PostgreSQL MCP Server with security controls and audit logging"
readme = "README.md"
authors = [
    { name = "srsubramanian", email = "subramanian_psg@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.20.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
]

[project.scripts]
fuzzy-bassoon = "fuzzy_bassoon.server:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
